Updates to timestamp processing